# Kodiqa-agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  README.md  actions.py  config.py  embeddings.py  kodiqa.py  lsp.py  mcp.py  memory.py  pyproject.toml  repomap.py  requirements.txt  templates.py  tools.py  web.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
assets/: demo.tape  social-preview.html
docs/: index.html
tests/: conftest.py  test_config.py  test_dispatch.py  test_edit_queue.py  test_features_v2.py  test_features_v3.py  test_features_v4.py  test_file_ops.py  test_mcp.py  test_memory.py  test_new_features.py  test_parse_actions.py  test_search_ops.py  test_stream_writer.py  test_web.py
